[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Titlescreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Shaders/OldTV.gdshader" type="Shader" id=2]
[ext_resource path="res://Scenes/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Application.gd" type="Script" id=4]
[ext_resource path="res://Scenes/GameoverSinglePlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Splashscreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Boot.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 2 )
shader_param/curvature = Vector2( 3, 3 )
shader_param/screenResolution = Vector2( 426, 341 )
shader_param/screenOpacity = Vector2( 0.5, 0.5 )
shader_param/time = 11.03
shader_param/brillance = null
shader_param/red = null

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Splashscreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Splashscreen_end"
tracks/0/type = "value"
tracks/0/path = NodePath("Splashscreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 3.13834 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1023 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Application" type="Control"]
script = ExtResource( 7 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
visible = false
material = SubResource( 6 )
margin_right = 1280.0
margin_bottom = 1024.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1280, 1024 )
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 0

[node name="GameContainer" type="Node2D" parent="ViewportContainer/Viewport"]
scale = Vector2( 3, 3 )
script = ExtResource( 4 )

[node name="Titlescreen" parent="ViewportContainer/Viewport/GameContainer" instance=ExtResource( 1 )]

[node name="Game" parent="ViewportContainer/Viewport/GameContainer" instance=ExtResource( 3 )]
visible = false

[node name="GameoverSinglePlayer" parent="ViewportContainer/Viewport/GameContainer" instance=ExtResource( 5 )]
visible = false

[node name="Splashscreen" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/Splashscreen_end = SubResource( 8 )

[connection signal="start_game" from="ViewportContainer/Viewport/GameContainer/Titlescreen" to="ViewportContainer/Viewport/GameContainer" method="_on_Titlescreen_start_game"]
[connection signal="gameover_single" from="ViewportContainer/Viewport/GameContainer/Game" to="ViewportContainer/Viewport/GameContainer" method="_on_Game_gameover_single"]
[connection signal="get_out" from="ViewportContainer/Viewport/GameContainer/GameoverSinglePlayer" to="ViewportContainer/Viewport/GameContainer" method="_on_GameoverSinglePlayer_get_out"]
[connection signal="end" from="Splashscreen" to="." method="_on_Splashscreen_end"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
